UtahLiveDataTest/src/objects/Announcement__c.object
<CustomObject>
    <fields>
        <fullName>IsOpen__c</fullName>
        <description>This field indicates whether the Annoucement is open or not.</description>
        <formula>TODAY() &lt;= CloseDate__c</formula>
        <inlineHelpText>This field indicates whether the Annoucement is open or not.</inlineHelpText>
        <label>IsOpen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPackageComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether all the forms are present in the package associated.</description>
        <label>IsPackageComplete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreApplicationPackageincluded__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pre-Application Package included ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreApplicationRequired__c</fullName>
        <formula>NOT(ISPICKVAL(PreApplicationNeeded__c,&apos;Not Required&apos;))</formula>
        <label>Is Pre Application Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will will true if record is sent to owner</description>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnpublishedSoleSourceFO__c</fullName>
        <formula>IF ( AND (TEXT (AnnouncementType__c ) == &apos;Sole Source&apos;, TEXT( Status__c ) == &apos;Active&apos;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Unpublished Sole Source FO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserReviewer__c</fullName>
        <formula>NOT(($User.FirstName + &quot; &quot; + $User.LastName =  AnnouncementReviewer__r.FirstName + &quot; &quot;+ AnnouncementReviewer__r.LastName) &amp;&amp; RecordType.DeveloperName =&apos;Grantor&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JustificationofOurStandingAgency__c</fullName>
        <label>JustificationofOurStandingAgency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeadLastModifiedDate__c</fullName>
        <label>LeadLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadNoUpdate__c</fullName>
        <formula>OR(FOALead__c = null, FOALead__r.LastUpdateDate__c = LeadLastModifiedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadNoUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LetterOfIntentDueDateTime__c</fullName>
        <description>Due date for the Letter of Intent, if applicable.</description>
        <label>Letter Of Intent Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LetterOfIntentDueDate__c</fullName>
        <description>Due date for the Letter of Intent, if applicable.</description>
        <label>Letter of Intent Due Date (Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LevelofEffort__c</fullName>
        <label>Level of Effort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkforAdditionalInformation__c</fullName>
        <label>Link For Additional Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongTextArea2__c</fullName>
        <label>LongTextArea2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MatchRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox is checked if match is required for funding.</description>
        <label>Match Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxApplicationsAllowed__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Maximum # Applications Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumnumberofProjectyears__c</fullName>
        <description>Maximum number of years for the sub-grant.</description>
        <label>Maximum Number Of Project years</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MissingFormDescription__c</fullName>
        <description>Details the list of forms which are missing in the package to submit the Application to Grants.gov</description>
        <label>MissingFormDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;ANN-&apos;+  Program__r.Name +&apos;-&apos;+  text(FiscalYear__c)+&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NecessarySystemsAndFinancialTools__c</fullName>
        <label>Necessary Systems and Financial Tools</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfWinners__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Applications who have been approved for award/negotiation</description>
        <label>No of Winners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoofApplicationsAwarded__c</fullName>
        <description>This filed is created to show data in dual axis line chart</description>
        <formula>FLOOR(NumberOfApplications__c - 0.25*NumberOfApplications__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Applications Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfApplicationsInReview__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of applications inside the review process</description>
        <label>NumberOfApplicationsInReview</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfApplications__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Applications</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPreApplications__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Pre-Applications</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofStaff__c</fullName>
        <label>Number of Staff</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObligatedAmount__c</fullName>
        <description>Set Aside Amount</description>
        <label>Set Aside Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OnCreateHide__c</fullName>
        <formula>ISBLANK(AnnouncementName__c)</formula>
        <label>OnCreateHide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityCategory__c</fullName>
        <label>Opportunity Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityResult__c</fullName>
        <label>Opportunity Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Opportunities (Organization)</relationshipLabel>
        <relationshipName>Funding_Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherEligibleApplicantTypes__c</fullName>
        <label>Other Eligible Applicant Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherFundingSources__c</fullName>
        <label>Other Funding Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerStateAgency__c</fullName>
        <label>Owner State Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastPerformanceandReputationwithagency__c</fullName>
        <label>PastPerformanceandReputationwithagency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <description>Point of Contact Phone Number</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Point of Contact Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfContactName__c</fullName>
        <formula>PointofContact__r.FirstName &amp;&quot; &quot;&amp;  PointofContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point Of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointofContactPhone__c</fullName>
        <formula>IF(ISBLANK(PointofContact__r.Phone), PointofContact__r.MobilePhone, PointofContact__r.Phone)</formula>
        <label>Phone(POC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointofContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Announcement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDateTime__c</fullName>
        <description>Date when the funding opportunity should be displayed on the interface, to the external users.</description>
        <label>Posting Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <description>Date when the funding opportunity should be displayed on the interface, to the external users.</description>
        <label>Posting Date (Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreApplicationDeadlineWithDateTime__c</fullName>
        <label>Pre-Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreApplicationDeadline__c</fullName>
        <description>The date by which the pre-application has to be submitted to grantor.</description>
        <label>Pre-Application Deadline(Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreApplicationExists__c</fullName>
        <formula>NumberOfPreApplications__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Application Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApplicationFinalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal User who is assigned as the Final Approver for Pre Applications belonging to a Review Group</description>
        <inlineHelpText>Internal User who is assigned as the Final Approver for Pre Applications belonging to a Review Group</inlineHelpText>
        <label>Pre-Application Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Announcements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreApplicationInstructions__c</fullName>
        <description>Instructions to complete the pre-application.</description>
        <label>Pre-Application Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PreApplicationNeeded__c</fullName>
        <label>PreApplication Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreApplicationPostDeadlineMessage__c</fullName>
        <label>Pre-Application Post Deadline Message</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PreApplicationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Application Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApplicationReviewGroupCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to create preapplication review group only once if not created earlier</description>
        <label>Pre-Application Review Group Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApplicationSubmissionEmailTemplate__c</fullName>
        <description>This field holds email template  name for Pre-Application submission .</description>
        <inlineHelpText>This field holds email template  name for Pre-Application submission .</inlineHelpText>
        <label>PreApplication Submission Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbabilityofWinningreceivingaGrant__c</fullName>
        <label>Probability of winning/receiving a grant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramIncomeTrackingRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field created to track the program income on the match tracker in payment request.</description>
        <label>Program Income Tracking Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramIncomeTracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Funding Opportunities (Program)</relationshipLabel>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramNameText__c</fullName>
        <formula>Program__r.ProgramNameText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Program__r.ProgramName__c</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A unique id to relate the announcement to the program.</description>
        <label>Program ID</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Funding Opportunities</relationshipLabel>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAreaRequired__c</fullName>
        <formula>ISPICKVAL(Program__r.IsProjectServiceAreaneeded__c,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectAreaRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectedAwardDateTime__c</fullName>
        <description>The date when the award is projected to be started for a given funding opportunity.</description>
        <label>Projected Award Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectedAwardDate__c</fullName>
        <description>The date when the award is projected to be started for a given funding opportunity.</description>
        <label>Projected Award Date(Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvideRationaleForPursuitThisGrant__c</fullName>
        <label>Provide Rationale For Pursuit This Grant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QAAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If feature of Q&amp;A is required</description>
        <inlineHelpText>If feature of Q&amp;A is required</inlineHelpText>
        <label>Q&amp;A Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFAReleaseDate__c</fullName>
        <label>RFA Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFARequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFA Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFAStatus__c</fullName>
        <label>RFA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFASubmitforApproval__c</fullName>
        <formula>OR( (ISPICKVAL(RFAStatus__c , &apos;&apos;)),
 (ISPICKVAL(RFAStatus__c , &apos;Approved&apos;)),
 ISPICKVAL( RFAStatus__c , &apos;Converted to Application&apos;),
ISPICKVAL( RFAStatus__c , &apos;Submitted for Approval&apos;),
ISPICKVAL( RFAStatus__c , &apos;Published&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFA Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <description>Recall Comment</description>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <inlineHelpText>1 - NA
2 - Low
3 - Medium
4 - High
5 - Very High</inlineHelpText>
        <label>Relevance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenderAllowEditApplication__c</fullName>
        <formula>TEXT($User.UserType) = &apos;External&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Allow Edit Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderViewApplications__c</fullName>
        <formula>NOT(NumberOfApplications__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RenderViewApplications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewNotCompleted__c</fullName>
        <formula>IF ( TEXT (ApplicationsReviewStatus__c) != &apos;Completed&apos;, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Not Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RichTextArea1__c</fullName>
        <label>RichTextArea1 (Obsolete)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RichTextArea2__c</fullName>
        <label>RichTextArea2 (Obsolete)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScheduleManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This user will be responsible for sending the NOFA/RFA for approval</inlineHelpText>
        <label>Schedule Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>( IF(ISNULL( VALUE(TEXT(Impact__c)) ),0,VALUE(TEXT(Impact__c))) + IF(ISNULL(VALUE(TEXT(Relevance__c))),0,VALUE(TEXT(Relevance__c))))
/
( (IF(ISNULL(VALUE(TEXT(Impact__c))),0,1)) + IF(ISNULL(VALUE(TEXT(Relevance__c))),0,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendToOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will indicate whether to send to owner in ReCall batch.</description>
        <label>Send To Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetAsideAmount__c</fullName>
        <description>Set Aside Amount</description>
        <label>Set Aside Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShowPreApplication__c</fullName>
        <formula>ISPICKVAL(PreApplicationNeeded__c,&apos;Not Required&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show PreApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkillSets__c</fullName>
        <label>Skill Sets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>NGO</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SponsoredSubmissionStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsored Submission Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Funding Opportunities (State Program)</relationshipLabel>
        <relationshipName>Announcements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>- In Progress - The information within the annoucement is incomplete. Such records shall not be avaiable for other users to view or edit.
- Review In Progress - Annoucements that are currently in the process of undergoing review shall have this status. Such records shall not be avaiable for other users to view or edit.
- Inactive - Approved annoucements whose Posting Date is in the future shall have this status. Such annoucements shall not be made available to recipient users.
- Active - Approved annoucements whose Posting Date is equal to the current date or is in the past and the Closing Date is in the future shall have this status. System shall make such annoucements available to recipients.
- Expired - Approved annoucements whose closing date is the current date or is in the past shall have this status. When an annoucement status changes from Active to Expired, it should no longer be made available to the recipient users.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Converted to Application</fullName>
                </value>
                <value>
                    <fullName>Converted to Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>RFA Approved</fullName>
                </value>
                <value>
                    <fullName>RFA Published</fullName>
                </value>
                <value>
                    <fullName>RFA Rejected</fullName>
                </value>
                <value>
                    <fullName>RFA Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Temporary_Field__c</fullName>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temporary__c</fullName>
        <formula>Program__r.NameTemplate__c</formula>
        <label>Temporary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPerc__c</fullName>
        <label>TestPerc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TimeExtensionAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Time Extension allowed for announcement to eligible applications?</description>
        <inlineHelpText>Is Time Extension allowed for announcement to eligible applications?</inlineHelpText>
        <label>Time Extension Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeLeft__c</fullName>
        <description>Time left before Announcement deadline</description>
        <formula>CloseDate__c  -  PostedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time left before Announcement deadline</inlineHelpText>
        <label>Time Left  for Expiration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grantee</fullName>
                </value>
                <value>
                    <fullName>Grantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UtahCFDANumber__c</fullName>
        <description>TFS - 1084,CCJJ-UOVC req to have CFDA number manually entered.</description>
        <label>UtahCFDANumber</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>